<resources>
    <string name="app_name">WeatherApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="degree">&#176;</string>
    <string name="arrow_down">&#8595;</string>
    <string name="arrow_up">&#8593;</string>
    <string name="wind">WIND</string>
    <string name="humidity">HUMIDITY</string>
    <string name="precipitation">PRECIPITATION</string>
    <string name="cloud_cover">CLOUD COVER</string>
    <string name="daily_temp">Daily Temperature</string>
    <string name="hourly_temp">Hourly Temperature</string>
    <string name="temp_map">Temperature Map</string>
    <string name="cloud_map">Cloud Map</string>
    <string name="preci_map">Precipitation Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>
