<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                tools:context="tk.trandinhphuc.weatherapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_panel"
        android:layout_centerHorizontal="true"
        android:text="Bien Hoa"
        android:textSize="30sp"
        android:textColor="@color/colorTextWhite"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/main_panel"
        android:paddingBottom="50dp">

        <LinearLayout
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:src="@drawable/partly_cloudy_day"
                android:layout_marginRight="5dp"
                android:id="@+id/icon_weather"/>

            <TextView
                android:id="@+id/tv_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="26"
                android:textColor="@color/colorTextWhite"
                android:textSize="60sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/degree"
                android:textColor="@color/colorTextWhite"
                android:textSize="60sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp"
            android:text="Partly Cloudy"
            android:textColor="@color/colorTextWhite"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_condition"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arrow_down"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tv_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/arrow_up"
                android:textColor="@color/colorLightBlue"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/tv_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree"
                android:textColor="@color/colorTextWhite"
                android:textSize="20sp"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
